# proxy_server_-TR2-

./: CMakeLists.txt  README.md  blacklist.c  blacklist.h  blacklist.txt  caching.c  caching.h  client.c  client.h  common.c  common.h  denyTerms.txt  detalhes_implementacao.txt  logBlack.txt  logWhite.txt  main.c  packet.txt  server.c  server.h  whitelist.txt
etc/: client.c
http_errors/: 403.html  blacklist.html  deny_terms.html
include/: blacklist.h  caching.h  common.h  inspecao.h  server.h
logs/: logBlack.txt  logDenied.txt  logWhite.txt
src/: blacklist.c  caching.c  common.c  inspecao.c  main.c  server.c
